--- a/python/src/index.html
+++ b/python/src/index.html
@@ -8,18 +8,18 @@
 <body>
   <div class="container">
     <h1 class="text-success my-5">Welcome to Keron Army Database</h1>
-    <form class="form-inline my-3">
-      <div class="form-group mb-2">
+    <form class="row row-cols-lg-auto my-3">
+      <div class="form-group mb-2 col-lg-4 col-sm-8">
         <input type="text" name="q" class="form-control" placeholder="Search" value="{{ query }}">
       </div>
-      <button type="submit" class="btn btn-primary mb-2 mx-sm-4">Search</button>
+      <button type="submit" class="btn btn-success mb-2 col-sm-2">Search</button>
     </form>
 
     {% if query != '' %}
-      <p><span class="text-info">{{ query }}</span></p>
-      <h2>Search results</h2>
+      <p><span class="text-success">{{ query }}</span></p>
     {% endif %}
 
+    <h3 class="text-success my-3">Search results</h3>
     <table class="table table-bordered">
       <thead>
         <tr>
