--- a/python/src/index.html
+++ b/python/src/index.html
@@ -15,6 +15,10 @@
       <button type="submit" class="btn btn-success mb-2 col-sm-2">Search</button>
     </form>
 
+    {% if query == '' %}
+      <p>Find the missing member.</p>
+    {% endif %}
+
     {% if query != '' %}
       <p><span class="text-success">{{ query }}</span></p>
     {% endif %}
